--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "next build",
         "start": "next start",
         "lint": "eslint",
+        "postinstall": "prisma generate",
         "db:deploy:dev": "npx prisma db push",
         "db:status:dev": "npx prisma db push"
     },
