--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
+        "dev:prod": "dotenv -e .env.production -- next dev",
         "build": "next build",
         "start": "next start",
         "lint": "eslint",
         "postinstall": "prisma generate",
         "db:deploy:dev": "npx prisma db push",
-        "db:status:dev": "npx prisma db push"
+        "db:status:dev": "npx prisma db push",
+        "db:deploy:prod": "dotenv -e .env.production -- npx prisma migrate deploy",
+        "db:status:prod": "dotenv -e .env.production -- npx prisma migrate status"
     },
     "dependencies": {
-        "@prisma/adapter-pg": "^7.4.1",
-        "@prisma/client": "^7.4.1",
+        "@prisma/client": "6.19.2",
+        "@supabase/ssr": "^0.8.0",
         "@supabase/supabase-js": "^2.97.0",
         "@tanstack/react-query": "^5.90.21",
         "class-variance-authority": "^0.7.1",
@@ -23,7 +26,6 @@
         "lucide-react": "^0.575.0",
         "next": "16.1.6",
         "next-themes": "^0.4.6",
-        "pg": "^8.18.0",
         "radix-ui": "^1.4.3",
         "react": "19.2.3",
         "react-dom": "19.2.3",
@@ -36,10 +38,11 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "dotenv-cli": "^11.0.0",
         "eslint": "^9",
         "eslint-config-next": "16.1.6",
         "prettier": "^3.8.1",
-        "prisma": "^7.4.1",
+        "prisma": "6.19.2",
         "shadcn": "^3.8.5",
         "tailwindcss": "^4",
         "tw-animate-css": "^1.4.0",
