--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@prisma/adapter-pg": "^7.4.1",
         "@prisma/client": "^7.4.1",
+        "@supabase/ssr": "^0.8.0",
         "@supabase/supabase-js": "^2.97.0",
         "@tanstack/react-query": "^5.90.21",
         "class-variance-authority": "^0.7.1",
